Bug 452979 - Incorrect country in address when using German locale
Summary: Incorrect country in address when using German locale
Status: RESOLVED FIXED
Alias: None
Product: KDE Itinerary
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Android Android 10.x
: NOR normal
Target Milestone: ---
Assignee: Volker Krause
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-04-25 09:15 UTC by jan
Modified: 2022-04-26 17:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.04.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jan 2022-04-25 09:15:53 UTC
I imported some information for a trip to Madrid, Spain. Everything looks good when I use English (US) as "locale", but when I choose German (Germany), the country for Madrid is given as "Deutschland".
Comment 1 Volker Krause 2022-04-26 17:54:39 UTC
Git commit b2bc9af04be59f949012bbc709f9c1bed1ad42f4 by Volker Krause.
Committed on 26/04/2022 at 17:37.
Pushed by vkrause into branch 'release/22.04'.

Don't attempt to resolve ISO 3166-1 country codes for the address formatter

That will revert that again anyway, and that seems to be less reliable
on Android than it is on Linux.
FIXED-IN: 20.04.1

M  +2    -2    src/app/localizer.cpp

https://invent.kde.org/pim/itinerary/commit/b2bc9af04be59f949012bbc709f9c1bed1ad42f4