Don't attempt to resolve ISO 3166-1 country codes for the address formatter

That will revert that again anyway, and that seems to be less reliable
on Android than it is on Linux.

BUG: 452979
FIXED-IN: 20.04.1